--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,8 @@ h1 {
     color: transparent;
     text-shadow: 0 0 1px rgb(49, 74, 91);
     letter-spacing: 5px;
+    margin: 5px 0 5px 0;
+    font-size: 30px;
 }
 
 h4 {
@@ -57,6 +59,10 @@ label {
     border-radius: 0px;
 }
 
+.header {
+    margin-top: 5px;
+}
+
 .navbar-inverse h1 a {
     color: #314a5b;
 }
@@ -66,7 +72,7 @@ label {
 }
 
 .form_search {
-    width: 50%;
+    width: 100%;
     margin-bottom: 5px;
 }
 
@@ -303,6 +309,10 @@ footer p a:hover {
 
     .col-lg-9>.container-fluid>.list-group {
         margin: 0px;
+    }
+
+    .nav_menu {
+        width: 100%;
     }
 }
 
