--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,7 +75,7 @@ select {
 
 #region {
     cursor: pointer;
-    padding: 5px 10px;
+    padding: 5px 0px 5px 0px;
     margin-left: 3px;
     border: none;
     background-color: white;
@@ -87,11 +87,12 @@ select {
 
 .sel {
     border: 1px solid #ccc;
-    padding: 6px 0 4px 20px;
-    border-radius: 5px;
+    padding: 6px 0 3px 10px;
+    border-radius: 7px;
     background-color: White;
     color: #9aa0ab;
-    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15);
+    margin-top: 1px;
+
 }
 
 .sel>i {
