--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,8 +23,6 @@ i {
 }
 
 h1 {
-    color: transparent;
-    text-shadow: 0 0 1px rgb(49, 74, 91);
     letter-spacing: 5px;
     margin: 5px 0 5px 0;
     font-size: 30px;
@@ -171,6 +169,14 @@ select {
     border-bottom-right-radius: 6px;
 }
 
+.panel-body {
+    padding: 0;
+}
+
+.list_gr_it {
+    font-size: 95%;
+}
+
 /* wrapper style */
 .panel-info>.panel-heading {
     background-image: none;
@@ -192,6 +198,12 @@ select {
 .list-group-item {
     margin-bottom: 0px;
     border: 0px;
+}
+
+.wrapper>.container-fluid>.col-lg-10>.container-fluid>.list-group>li>.list-group-item {
+    margin-bottom: 0px;
+    border: 0px;
+    height: 145px;
 }
 
 .panel-info {
@@ -256,17 +268,17 @@ select {
     transition: all 0.5s ease-out;
 }
 
-.col-lg-9>.container-fluid>.list-group>li>a {
+.col-lg-10>.container-fluid>.list-group>li>a {
     border: 1px solid #a7a5a554;
     margin-bottom: 5px;
 }
 
-.col-lg-9>.container-fluid>.list-group>li>h3 {
+.col-lg-10>.container-fluid>.list-group>li>h3 {
     text-align: center;
     margin: 0 0 10px 0;
 }
 
-.col-lg-9>.container-fluid>.list-group>li>h3>span {
+.col-lg-10>.container-fluid>.list-group>li>h3>span {
     background-color: #314a5b;
     margin-left: 20px;
 }
@@ -346,6 +358,88 @@ select {
     color: black;
 }
 
+.thumbnail {
+    width: 135px;
+    height: 120px;
+}
+
+.thumbnail>img {
+    width: 100%;
+    height: 100%;
+}
+
+.addPhotoParag {
+    margin-top: 40px;
+    margin-left: 30px;
+}
+
+.form_add {
+    height: 40px;
+    width: 100%;
+    border-top-color: #ccc !important;
+    border-right-color: #ccc !important;
+    border-bottom-color: #ccc !important;
+    border-left-color: white !important;
+    background-color: white !important;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+}
+
+.input-group-addon>i {
+    color: #314a5b;
+}
+
+.group_chekbox {
+    width: 125px;
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    float: left;
+    margin-right: 2px;
+    margin-top: 2px;
+}
+
+.wrapper>.addAd>.col-lg-6>.container>form>.btn {
+    background-color: #fa5c65;
+    margin-left: 28%;
+    margin-top: 30px;
+    color: white;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
+    width: 188px;
+    height: 50px;
+}
+
+.wrapper>.addAd>.col-lg-6>.container>form>.btn>i {
+    margin-right: 10px;
+}
+
+.form-check-label {
+    margin-top: 10px;
+    margin-left: 5px;
+}
+
+.group_chekbox_addon {
+    border: none;
+}
+
+#categoryProduct {
+    cursor: pointer;
+}
+
+#locationProduct {
+    cursor: pointer;
+}
+
+.input-group-addon {
+    background-color: white;
+}
+
+.input-group>textarea {
+    height: 150px;
+    resize: none;
+    border-left-color: white;
+}
+
 /* footer style */
 footer {
     height: 50px;
@@ -379,7 +473,7 @@ footer p a:hover {
         text-align: center; 
     }
 
-    .col-lg-9>.container-fluid>.list-group {
+    .col-lg-10>.container-fluid>.list-group {
         margin: 0px;
     }
 
